--- a/localisation/replace/aml_victory_points_l_english.yml
+++ b/localisation/replace/aml_victory_points_l_english.yml
@@ -161,7 +161,7 @@
  VICTORY_POINTS_4445:0 "Montpelier"
  VICTORY_POINTS_3732:0 "Augusta"
  VICTORY_POINTS_14324:0 "Port Lémurien"
- VICTORY_POINTS_8502:0 "Oysterport"
+ VICTORY_POINTS_8502:0 "Huîtrier"
  VICTORY_POINTS_14646:0 "Sitanamupra"
  VICTORY_POINTS_14653:0 "Deviyo"
  VICTORY_POINTS_14668:0 "Sanduro"
