--- a/localisation/RGD_l_english.yml
+++ b/localisation/RGD_l_english.yml
@@ -39,6 +39,11 @@
  RGD_diego_pascual_paz:0 "Diego Pascual Paz"
  RGD_claudio_cara_de_ortegon:0 "Claudio Cara de Ortegon"
  RGD_rainerio_candella:0 "Rainerio X. Candella"
+ RGD_naval_leader_1:0 "Alfons Esteban Caballero"
+ RGD_naval_leader_2:0 "Josué Pere Castellano"
+ RGD_naval_leader_3:0 "Ramón César Chaves"
+ RGD_naval_leader_4:0 "Ricard Florencio Pérez"
+ RGD_naval_leader_4:0 "Raül G. Aquino"
  
  #focuses
  RGD_seek_statehood:0 "Seek Official US Statehood"
