--- a/localisation/HBO_l_english.yml
+++ b/localisation/HBO_l_english.yml
@@ -2,7 +2,7 @@
 
  #characters
  #political leaders
- HBO_socialism_leader:0 "Velko Pelikan"
+ HBO_socialism_leader:0 "Velko Pelkan"
  HBO_stalinism_leader:0 "Grubisa Medvedyev"
  HBO_generic_fascism_leader:0 "Obren Wilenken"
  HBO_despotism_leader:0 "Cvjetko Sholokhov"
