Mu portraits fixed, finally

--- a/localisation/MUU_l_english.yml
+++ b/localisation/MUU_l_english.yml
@@ -6,6 +6,8 @@
  MUU_Qijutsli_Tsipir:0 "Qijutsli Tsipir"
  MUU_Iqajj_Donaquaq:0 "Iqajj Donaquaq"
  MUU_iaod_milinjui:0 "Iaod Milinjui"
+ MUU_naqir_angasapit:0 "Naqir Angasapit"
+ MUU_talliq_resqanle:0 "Talliq Resqanle"
  MUU_dayum_sohollo:0 "Dayum Sohollo"
  MUU_umundr_modaqri:0 "Umundr Modaqri"
  MUU_uajsun_unijum:0 "Uajsun Unijum"
