--- a/localisation/BLM_l_english.yml
+++ b/localisation/BLM_l_english.yml
@@ -22,7 +22,7 @@
  BLM_our_culture_desc:0 "not finished"
  BLM_our_place:0 "Our place"
  BLM_our_place_desc:0 "not finished"
- BLM_government_reform:0 "Government reform"
+ BLM_government_reform:0 "Government Reform"
  BLM_government_reform_desc:0 "The government was created by old British nobles with no regard for the people, we must fix this bureaucracy of the nobles."
  BLM_land_reform:0 "Land Reform"
  BLM_land_reform_desc:0 "A lot of land is in the hands of the nobles thanks to programs of the previous administrations, we must give some to the peasants to allow further development."
@@ -36,7 +36,7 @@
  BLM_federal_sympathies_desc:0 "To further smoothen the transformation to a federation we must appoint new pro-federation officials and bring further benefits to federal sympathizers."
  BLM_second_anglosaxon_reforms:0 "Second Anglo-Saxon Reforms"
  BLM_second_anglosaxon_reforms_desc:0 "The Anglo-Saxon Reforms were devestating reforms which ravaged the country from 1893-1911. The era was known for its brutality against non-Anglo-Saxon and non-Anglish peoples, seeing them all as threats and barbarians in need of 'civilizing'. Now a great debate has started in the British-Lemurian parliment regarding further reforms."
- BLM_continue_the_reforms:0 "Continue the reforms"
+ BLM_continue_the_reforms:0 "Continue the Reforms"
  BLM_continue_the_reforms_desc:0 ""For the good of the nation we must further the reforms, let us not forget the brutality of these barbarians and their refusal to co-operate with changes in the colony. The barbarians must be replaced with the civilized British man!" -Andrew L. Baxter, addressing the British-Lemurian Parliment."
  BLM_act_283:0 "Act 283"
  BLM_act_283_desc:0 "Act 283 was an amendment to the British-Lemurian constitution, officially an emergency act, which allowed for the head of government to remove unwanted ministers from government. Federalist ministers officially outnumbered Loyalist ones though the Loyalists held stronger seats in government."
