--- a/localisation/ATL_l_english.yml
+++ b/localisation/ATL_l_english.yml
@@ -577,15 +577,15 @@
  ATL_itorkanak_war_category:0 "War on the Itorkanak"
  
  ATL_police_search_cyclic:0 "Incursion in Progress"
- ATL_police_search_cooldown:0 "Police Operation in Preparation"
+ ATL_police_search_cooldown:0 "Preparing Police Operation"
  
- atlantis_gangster.1.t:0 "Kaprastiak leader captured"
- atlantis_gangster.1.d:0 "Dude was captured lol"
- atlantis_gangster.1.a:0 "FUCK YEA"
+ atlantis_gangster.1.t:0 "Kaprastiak Leader Captured"
+ atlantis_gangster.1.d:0 "Today our police forces were successful in capturing an important leader of the Kaprastiak secret society. With the leader's capture being widely broadcast in our news media this is a propaganda win as well as a severe blow to the Kaprastiak scum."
+ atlantis_gangster.1.a:0 "Fine work, everyone!"
  
- atlantis_gangster.2.t:0 "Itorkanak leader captured"
- atlantis_gangster.2.d:0 "REKT"
- atlantis_gangster.2.a:0 "xdddddd"
+ atlantis_gangster.2.t:0 "Itorkanak Leader Captured"
+ atlantis_gangster.2.d:0 "The Itorkanak secret society is down by another leader today as our police forces, in a coordinated assault, capture one of their important leaders along with significant cache of documents detailing further Itorkanak subversion in our nation."
+ atlantis_gangster.2.a:0 "Excellent!"
  
  
  
