--- a/localisation/AUD_l_english.yml
+++ b/localisation/AUD_l_english.yml
@@ -32,12 +32,13 @@
 #military chiefs
  AUD_army_chief_defensive_2:0 "Zachary Campbell"
  AUD_army_chief_drill_2:0 "Jake Wright"
- AUD_army_chief_offensive_2:0 "Jake Wright"
+ AUD_army_chief_offensive_2:0 "Paul Gilchrist"
  AUD_navy_chief_decisive_battle_2:0 "Damian Young"
  AUD_navy_chief_naval_aviation_2:0 "Evan Murray"
  AUD_air_chief_ground_support_2:0 "Jonathan Doyle"
  AUD_air_chief_reform_2:0 "Aydin Holmes"
  AUD_army_infantry_1:0 "Jeremiah Hunter"
+ AUD_army_entrenchment_1:0 "Alan S. Nimby"
  AUD_army_logistics_2:0 "Regan Martin"
  AUD_air_bomber_interception_2:0 "Ellis Scott"
  AUD_air_close_air_support_2:0 "Dante Harrison"
