WUL and WTS advisors

--- a/localisation/WTS_l_english.yml
+++ b/localisation/WTS_l_english.yml
@@ -314,59 +314,37 @@
  
  #characters
  #military leaders
- XXX_corps_commander_1:0 "Billy Chris Bunker"
- XXX_corps_commander_2:0 "Taskill Franklyn Stanley"
- XXX_corps_commander_3:0 "Geoffrey Austin Peterson"
- XXX_corps_commander_4:0 "Jaasau Thornton Hubert"
- XXX_naval_leader_1:0 "Iddo Clair Swift"
- XXX_naval_leader_2:0 "Omar Leopold Gladwyn"
- XXX_naval_leader_3:0 "Rolf Jaron Everly"
- XXX_naval_leader_4:0 "Mitchell Norbert Huddleson"
- XXX_naval_leader_5:0 "Geoff Patton Mullins"
+ WTS_corps_commander_1:0 "Billy Chris Bunker"
+ WTS_corps_commander_2:0 "Taskill Franklyn Stanley"
+ WTS_corps_commander_3:0 "Geoffrey Austin Peterson"
+ WTS_corps_commander_4:0 "Jaasau Thornton Hubert"
+ WTS_naval_leader_1:0 "Iddo Clair Swift"
+ WTS_naval_leader_2:0 "Omar Leopold Gladwyn"
+ WTS_naval_leader_3:0 "Rolf Jaron Everly"
+ WTS_naval_leader_4:0 "Mitchell Norbert Huddleson"
+ WTS_naval_leader_5:0 "Geoff Patton Mullins"
  #advisors
- XXX_anti_communist_crusader:0 "NAME"
- XXX_armaments_organizer:0 "NAME"
- XXX_backroom_backstabber:0 "NAME"
- XXX_captain_of_industry:0 "Faron Lenard Sergeant"
- XXX_communist_revolutionary:0 "Carlyle Shem Hobbes"
- XXX_compassionate_gentleman:0 "Arihel Warren Randal"
- XXX_democratic_reformer:0 "Aaron Irvine Montgomery"
- XXX_economist:0 "NAME"
- XXX_editor:0 "NAME"
- XXX_fascist_demagogue:0 "Ferdy Uri Akers"
- XXX_financial_expert:0 "NAME"
- XXX_head_of_intelligence:0 "NAME"
- XXX_ideological_crusader:0 "NAME"
- XXX_popular_figurehead:0 "Pete Zarah MacRae"
- XXX_prince_of_terror:0 "NAME"
- XXX_silent_workhorse:0 "Scot Benayahu MacWilliam"
- XXX_smooth_talking_charmer:0 "Bertram Scott Blanchard"
- XXX_war_industrialist:0 "NAME"
+ WTS_anti_communist_crusader:0 "NAME"
+ WTS_armaments_organizer:0 "NAME"
+ WTS_backroom_backstabber:0 "NAME"
+ WTS_captain_of_industry:0 "Faron Lenard Sergeant"
+ WTS_communist_revolutionary:0 "Carlyle Shem Hobbes"
+ WTS_compassionate_gentleman:0 "Arihel Warren Randal"
+ WTS_democratic_reformer:0 "Aaron Irvine Montgomery"
+ WTS_economist:0 "NAME"
+ WTS_editor:0 "NAME"
+ WTS_generic_fascist_demagogue:0 "Ferdy U. Akers"
+ WTS_financial_expert:0 "NAME"
+ WTS_head_of_intelligence:0 "NAME"
+ WTS_ideological_crusader:0 "NAME"
+ WTS_popular_figurehead:0 "Pete Zarah MacRae"
+ WTS_prince_of_terror:0 "NAME"
+ WTS_silent_workhorse:0 "Scot Benayahu MacWilliam"
+ WTS_smooth_talking_charmer:0 "Bertram Scott Blanchard"
+ WTS_war_industrialist:0 "NAME"
  #theorists
- XXX_military_theorist:0 "Abiel Jo Coburn"
- XXX_air_warfare_theorist:0 "Rich Jensen Avery"
- XXX_naval_theorist:0 "Achaicus Lachie Gadsby"
- XXX_naval_aviation_pioneer:0 "NAME"
- XXX_victory_through_airpower:0 "NAME"
- XXX_nuclear_scientist:0 "NAME"
- XXX_rocket_scientist:0 "NAME"
+ WTS_military_theorist:0 "Abiel Jo Coburn"
  #military chiefs
- XXX_army_chief_defensive_2:0 "Charlton Abessa Wade"
- XXX_army_chief_drill_2:0 "NAME"
- XXX_army_chief_maneuver_2:0 "NAME"
- XXX_army_chief_morale_2:0 "Heath Darell Wyman"
- XXX_army_chief_offensive_2:0 "NAME"
- XXX_army_chief_organizational_1:0 "NAME"
- XXX_navy_chief_decisive_battle_2:0 "Scottie Richard Chaplin"
- XXX_navy_chief_naval_aviation_2:0 "Tracy Gregg Burton"
- XXX_air_chief_ground_support_2:0 "Shayne 'Kip' Pressley"
- XXX_air_chief_reform_2:0 "Glen Samuel Lee"
- XXX_army_armored_1:0 "NAME"
- XXX_army_entrenchment_1:0 "Greyson Neal Bridges"
- XXX_army_infantry_1:0 "Darrell Terrell Owston"
- XXX_army_logistics_2:0 "NAME"
- XXX_air_bomber_interception_2:0 "Malone Terence Quick"
- XXX_air_close_air_support_2:0 "Sargon Steph Walsh"
- XXX_navy_screen_2:0 "Ieremias Tucker Dukes"
- XXX_navy_anti_submarine_1:0 "NAME"
- XXX_navy_naval_air_defense_2:0 "NAME"
+ WTS_navy_chief_naval_aviation_2:0 "Tracy Gregg Burton"
+ WTS_air_chief_ground_support_2:0 "Shayne 'Kip' Pressley"
+ WTS_navy_screen_2:0 "Ieremias Tucker Dukes"
