--- a/localisation/FMU_l_english.yml
+++ b/localisation/FMU_l_english.yml
@@ -425,5 +425,26 @@
  FMU_white_immigration_laws:1 "White Immigration Laws"
  FMU_ache_of_war:1 "The Ache of War"
  FMU_pay_back_debt_to_the_ifc_category:0 "Paying the last of the reparations."
+ fmu.4.t:0 "Integrate Manu"
+ fmu.4.d:0 "Thursa Words please! FSM has come to uss offering full integration into their nation, our economy is expected to boom following annexation and relinquishing of tarrifs"
+ fmu.4.a:0 "Accept"
+ fmu.4.b:0 "Rejected"
+ fmu.5.t:0 "Manu Accepts"
+ fmu.5.d:0 "Manu accepts"
+ fmu.13.t:0 "Manu Rejected the proposal"
+ fmu.13.d:0 "Thursa words play. The people have manu rejected our offer of integration despite the numerous benifits. HOW DARE THEY"
+ fmu.13.a:0 "Oh well"
+ fmu.13.b:0 "We shall show them our peaceful ways by force!"
  fmu.12.t:0 "Annex Schonland"
+ fmu.12.d:0 "Thursa Words please! WE must have Schonland join our great union"
+ fmu.12.a:0 "Reject"
+ fmu.12.b:0 "Accept"
  fmu.20.t:0 "Annex Vogelinsel"
+ fmu.20.d:0 "Thursa Words please! WE must have Vogelinsel join our great union"
+ fmu.20.a:0 "Reject"
+ fmu.20.b:0 "Become a puppet"
+ fmu.20.c:0 "Become Annexed"
+ fmu.24.t:0 "The Pan German Union"
+ fmu.24.d:0 "Thursa Words please! FSM suggests we either create a pan german union with or without German"
+ fmu.24.a:0 "We shall join them"
+ fmu.24.b:0 "we shall ignore them"
