--- a/localisation/FMU_l_english.yml
+++ b/localisation/FMU_l_english.yml
@@ -426,25 +426,25 @@
  FMU_ache_of_war:1 "The Ache of War"
  FMU_pay_back_debt_to_the_ifc_category:0 "Paying the last of the reparations."
  fmu.4.t:0 "Integrate Manu"
- fmu.4.d:0 "Thursa Words please! FSM has come to uss offering full integration into their nation, our economy is expected to boom following annexation and relinquishing of tarrifs"
- fmu.4.a:0 "Accept"
- fmu.4.b:0 "Rejected"
+ fmu.4.d:0 "At long last the time to fully bury the damned Treaty of Versailles has come! Freistaaten von Mu has reached out to us with a proposal that, if we accept, will bring prosperity and safety to our people. Let us put the evils of the past behind and march forward into a glorious future together!"
+ fmu.4.a:0 "Accept the proposal"
+ fmu.4.b:0 "Reject the proposal"
  fmu.5.t:0 "Manu Accepts"
- fmu.5.d:0 "Manu accepts"
- fmu.13.t:0 "Manu Rejected the proposal"
- fmu.13.d:0 "Thursa words play. The people have manu rejected our offer of integration despite the numerous benifits. HOW DARE THEY"
+ fmu.5.d:0 "Manu Accepts"
+ fmu.13.t:0 "Manu Rejects the Proposal"
+ fmu.13.d:0 "The fools in Manu have gone so far as to reject our overtures at reuniting with our great nation. Thunderous fools! Now we must decide what course of action to take; should we continue to pursue the annexation or leave them to their rank ignorance?"
  fmu.13.a:0 "Oh well"
- fmu.13.b:0 "We shall show them our peaceful ways by force!"
+ fmu.13.b:0 "We informing them, not offering."
  fmu.12.t:0 "Annex Schonland"
- fmu.12.d:0 "Thursa Words please! WE must have Schonland join our great union"
+ fmu.12.d:0 "Years ago we aided each other in our quest for independence from the Dutch Crown. Now, we can once again stand together for the unity and strength of the German peoples!"
  fmu.12.a:0 "Reject"
  fmu.12.b:0 "Accept"
  fmu.20.t:0 "Annex Vogelinsel"
- fmu.20.d:0 "Thursa Words please! WE must have Vogelinsel join our great union"
+ fmu.20.d:0 "For too long have we been nations and peoples divided. Vogelinsel and Freistaaten von Mu have a long history of working together and fighting side by side for the good of our people. We must not let this opportunity go by - we must unite as one nation to bring security and peace to our people!"
  fmu.20.a:0 "Reject"
  fmu.20.b:0 "Become a puppet"
  fmu.20.c:0 "Become Annexed"
  fmu.24.t:0 "The Pan German Union"
- fmu.24.d:0 "Thursa Words please! FSM suggests we either create a pan german union with or without German"
- fmu.24.a:0 "We shall join them"
- fmu.24.b:0 "we shall ignore them"
+ fmu.24.d:0 "Freistaaten von Mu has approached us with a proposal; to join in a Pan-German Union which will once again bring us closer to the Fatherland and will bind us together as one German people."
+ fmu.24.a:0 "We shall join them!"
+ fmu.24.b:0 "Ignore the populist demagogues!"
