Strategic zones and provinces now mostly done

--- a/localisation/aml_state_names_l_english.yml
+++ b/localisation/aml_state_names_l_english.yml
@@ -288,3 +288,25 @@
  STATE_1115:0 "Ubangi"
  STATE_1116:0 "Katanga"
  STATE_1117:0 "Marrah"
+ STATE_1118:0 "Arctic Archipelago"
+ STATE_1119:0 "Jan Mayen"
+ STATE_1120:0 "Lyakhovsky Islands"
+ STATE_1121:0 "Arctic Islands"
+ STATE_1122:0 "Svalbard"
+ STATE_1123:0 "Severnaya Zemlya"
+ STATE_1124:0 "Antarctic"
+ STATE_1125:0 "Marion Island"
+ STATE_1126:0 "Îles Crozet"
+ STATE_1127:0 "Farragut Islands"
+ STATE_1128:0 "Clipperton Island"
+ STATE_1129:0 "Antarctica 2"
+ STATE_1130:0 "Antarctica 3"
+ STATE_1131:0 "Antarctica 4"
+ STATE_1132:0 "Antarctica 5"
+ STATE_1133:0 "Antarctica 6"
+ STATE_1134:0 "Antarctica 7"
+ STATE_1135:0 "Antarctica 8"
+ STATE_1136:0 "French Kanaganesia"
+ STATE_1137:0 "Spratley Islands"
+ STATE_1138:0 "Paracel Islands"
+ 
