--- a/localisation/replace/aml_strategic_region_names_l_english.yml
+++ b/localisation/replace/aml_strategic_region_names_l_english.yml
@@ -72,7 +72,7 @@
  STRATEGICREGION_71:0 "Circum-Uturan Sea"
  STRATEGICREGION_72:0 "Straits of Malacca"
  STRATEGICREGION_73:0 "Gulf of Thailand"
- STRATEGICREGION_74:0 "Far Southern Lemurian Ocean"
+ STRATEGICREGION_74:0 "West Biscay Sea"
  STRATEGICREGION_75:0 "South China Sea"
  STRATEGICREGION_76:0 "East China Sea"
  STRATEGICREGION_77:0 "Yellow Sea"
@@ -177,7 +177,7 @@
  STRATEGICREGION_176:0 "West Central Pacific"
  STRATEGICREGION_177:1 "Far Western Pacific"
  STRATEGICREGION_178:0 "Southern Kanaganesia"
- STRATEGICREGION_179:1 "Tahitian Coast"
+ STRATEGICREGION_179:1 "Tahitian Sea"
  STRATEGICREGION_180:0 "Sea of Maui"
  STRATEGICREGION_181:0 "Madagascar"
  STRATEGICREGION_182:0 "North West Africa"
@@ -259,7 +259,7 @@
  STRATEGICREGION_258:0 "Mazu Reach"
  STRATEGICREGION_259:0 "Northern Canada"
  STRATEGICREGION_260:0 "Greenland Sea"
- STRATEGICREGION_261:0 "NAME"
+ STRATEGICREGION_261:0 "Awarurua Interior"
  STRATEGICREGION_262:0 "Ottosstaat"
  STRATEGICREGION_263:0 "Todorovia"
  STRATEGICREGION_264:0 "Canaje"
@@ -282,10 +282,10 @@
  STRATEGICREGION_281:0 "Bluewater Coast"
  STRATEGICREGION_282:0 "Austral-Pacific Junction"
  STRATEGICREGION_283:0 "Subequatorial Pacific"
- STRATEGICREGION_284:0 "NAME"
+ STRATEGICREGION_284:0 "East Biscay Sea"
  STRATEGICREGION_285:0 "Canadian Arctic Waters"
  STRATEGICREGION_286:0 "Arctic Archipelago"
- STRATEGICREGION_287:0 "NAME"
+ STRATEGICREGION_287:0 "Scotia Sea"
  STRATEGICREGION_288:0 "Blauwasser Plain"
  STRATEGICREGION_289:0 "Fijnland"
  STRATEGICREGION_290:0 "Tiquea"
