--- a/localisation/replace/vanilla_state_names_l_english.yml
+++ b/localisation/replace/vanilla_state_names_l_english.yml
@@ -7,6 +7,7 @@
  STATE_521:0 "South Queensland"
  STATE_579:0 "Lower Hyperborea"
  STATE_580:0 "Upper Hyperborea"
+ STATE_630:0 "Manukai Island" 
  STATE_696:0 "Vejontela"
  STATE_727:0 "Islárida"
  STATE_767:0 "Zerzura"
