--- a/localisation/replace/aml_countries_l_english.yml
+++ b/localisation/replace/aml_countries_l_english.yml
@@ -819,3 +819,15 @@
  HBO_democratic_ADJ:0 "Hyperborean"
  HBO_neutrality_ADJ:0 "Hyperborean"
  HBO_communism_ADJ:0 "Hyperborean"
+ ATC_fascism:0 "Penguin Empire"
+ ATC_fascism_DEF:0 "Penguin Empire"
+ ATC_democratic:0 "Penguin Empire"
+ ATC_democratic_DEF:0 "Penguin Empire"
+ ATC_neutrality:0 ""Penguin Empire"
+ ATC_neutrality_DEF:0 "Penguin Empire"
+ ATC_communism:0 "Penguin Empire"
+ ATC_communism_DEF:0 "Penguin Empire"
+ ATC_fascism_ADJ:0 "Penguins"
+ ATC_democratic_ADJ:0 "Penguins"
+ ATC_neutrality_ADJ:0 "Penguins"
+ ATC_communism_ADJ:0 "Penguins"
