Closing in on the finish line

--- a/localisation/replace/aml_strategic_region_names_l_english.yml
+++ b/localisation/replace/aml_strategic_region_names_l_english.yml
@@ -301,7 +301,7 @@
  STRATEGICREGION_300:0 "Lankr"
  STRATEGICREGION_301:0 "Eastern Indolemuria"
  STRATEGICREGION_302:0 "Karlswald"
- STRATEGICREGION_303:0 "NAME"
+ STRATEGICREGION_303:0 "Zieleiland"
  STRATEGICREGION_304:0 "NAME"
  STRATEGICREGION_305:0 "NAME"
  STRATEGICREGION_306:0 "NAME"
