--- a/localisation/aml_state_names_l_english.yml
+++ b/localisation/aml_state_names_l_english.yml
@@ -309,4 +309,5 @@
  STATE_1136:0 "French Kanaganesia"
  STATE_1137:0 "Spratley Islands"
  STATE_1138:0 "Paracel Islands"
+ STATE_1139:0 "Great and Little Bear Islands"
  
