--- a/localisation/aml_state_names_l_english.yml
+++ b/localisation/aml_state_names_l_english.yml
@@ -316,4 +316,5 @@
  STATE_1143:0 "East Marie Byrd Land"
  STATE_1144:0 "Antarctic Peninsula"
  STATE_1145:0 "Princess Elizabeth Land"
+ STATE_1146:0 "Wrangel Island"
  
