Avahya Added - Antarctica fixes

--- a/localisation/aml_state_names_l_english.yml
+++ b/localisation/aml_state_names_l_english.yml
@@ -317,4 +317,8 @@
  STATE_1144:0 "Antarctic Peninsula"
  STATE_1145:0 "Princess Elizabeth Land"
  STATE_1146:0 "Wrangel Island"
+ STATE_1147:0 "Chirikov Island"
+ STATE_1148:0 "Hogland Archipelago"
+ STATE_1149:0 "Avahya Archipelago"
+ STATE_1150:0 "Panghuzitz Island"
  
