--- a/localisation/replace/aml_strategic_region_names_l_english.yml
+++ b/localisation/replace/aml_strategic_region_names_l_english.yml
@@ -62,7 +62,7 @@
  STRATEGICREGION_61:0 "Cap Verde Plain"
  STRATEGICREGION_62:0 "Gulf Of Guinea"
  STRATEGICREGION_63:0 "Argentine Coast"
- STRATEGICREGION_64:0 "South Georgia Sea"
+ STRATEGICREGION_64:0 "West Scotia Sea"
  STRATEGICREGION_65:0 "Cape of Africa"
  STRATEGICREGION_66:0 "South Central Atlantic"
  STRATEGICREGION_67:0 "Atlantic-Indian Ridge"
@@ -285,7 +285,7 @@
  STRATEGICREGION_284:0 "East Biscay Sea"
  STRATEGICREGION_285:0 "Canadian Arctic Waters"
  STRATEGICREGION_286:0 "Arctic Archipelago"
- STRATEGICREGION_287:0 "Scotia Sea"
+ STRATEGICREGION_287:0 "East Scotia Sea"
  STRATEGICREGION_288:0 "Blauwasser Plain"
  STRATEGICREGION_289:0 "Fijnland"
  STRATEGICREGION_290:0 "Tiquea"
@@ -303,9 +303,9 @@
  STRATEGICREGION_302:0 "Karlswald"
  STRATEGICREGION_303:0 "Zieleiland"
  STRATEGICREGION_304:0 "Newfoundland"
- STRATEGICREGION_305:0 "NAME"
- STRATEGICREGION_306:0 "NAME"
- STRATEGICREGION_307:0 "NAME"
+ STRATEGICREGION_305:0 "Argentine Basin"
+ STRATEGICREGION_306:0 "Western Islands"
+ STRATEGICREGION_307:0 "Eastern Islands"
  STRATEGICREGION_308:0 "NAME"
  STRATEGICREGION_309:0 "NAME"
  STRATEGICREGION_310:0 "NAME"
