--- a/localisation/replace/aml_victory_points_l_english.yml
+++ b/localisation/replace/aml_victory_points_l_english.yml
@@ -1,7 +1,7 @@
 ﻿l_english:
  VICTORY_POINTS_13010:0 "Reitanitz"
  VICTORY_POINTS_13047:0 "Wake Harbor"
- VICTORY_POINTS_14999:0 "Nakhlagluta"
+ VICTORY_POINTS_14999:0 "Geqijji"
  VICTORY_POINTS_14301:0 "Bongo"
  VICTORY_POINTS_14294:0 "Lyunamtsam"
  VICTORY_POINTS_13254:0 "Weyluchanao"
@@ -14,9 +14,9 @@
  VICTORY_POINTS_13335:0 "Arapōhue"
  VICTORY_POINTS_13413:0 "Hāpua-waikawa"
  VICTORY_POINTS_13419:0 "Kōhīnui"
- VICTORY_POINTS_13420:0 "Pōkemon"
+ VICTORY_POINTS_14760:0 "Pōkemon"
  VICTORY_POINTS_13431:0 "Kororāreka"
- VICTORY_POINTS_13432:0 "Wainuiomu"
+ VICTORY_POINTS_14761:0 "Wainuiomu"
  VICTORY_POINTS_13966:0 "'Aifa'arua'i"
  VICTORY_POINTS_13835:0 "Muguraq"
  VICTORY_POINTS_5254:0 "Königshafen"
@@ -34,41 +34,41 @@
  VICTORY_POINTS_13357:0 "Victoria"
  VICTORY_POINTS_13716:0 "Marinswade"
  VICTORY_POINTS_13657:0 "Geqijji"
- VICTORY_POINTS_13608:0 "Von Isignystadt"
- VICTORY_POINTS_13595:0 "Germaniahafen"
+ VICTORY_POINTS_14947:0 "Isignystadt"
+ VICTORY_POINTS_14936:0 "Germaniahafen"
  VICTORY_POINTS_14084:0 "Oranjehaven"
- VICTORY_POINTS_14046:0 "Salchicha"
- VICTORY_POINTS_13975:0 "Ciudad de Todorov"
- VICTORY_POINTS_13593:0 "Wrightston"
- VICTORY_POINTS_13483:0 "Setimana"
- VICTORY_POINTS_14129:0 "Geestbai"
+ VICTORY_POINTS_15387:0 "Salchicha"
+ VICTORY_POINTS_15315:0 "Ciudad de Todorov"
+ VICTORY_POINTS_14935:0 "Wrightston"
+ VICTORY_POINTS_14824:0 "Setimana"
+ VICTORY_POINTS_15470:0 "Geestbai"
  VICTORY_POINTS_2145:0 "Salvación"
- VICTORY_POINTS_13976:0 "Tatea"
- VICTORY_POINTS_13943:0 "Papeete"
+ VICTORY_POINTS_15312:0 "Tatea"
+ VICTORY_POINTS_10188:0 "Papeete"
  VICTORY_POINTS_13603:0 "Nyrønne"
  VICTORY_POINTS_13049:0 "Pitkairn"
- VICTORY_POINTS_8787:0 "Blauwasser"
- VICTORY_POINTS_13837:0 "Vatpagchi Saeli"
+ VICTORY_POINTS_14535:0 "Blauwasser"
+ VICTORY_POINTS_15178:0 "Vatpagchi Saeli"
  VICTORY_POINTS_13905:0 "Nofoaga Agava'a"
  VICTORY_POINTS_13907:0 "Awa"
  VICTORY_POINTS_13515:0 "Moli Feagai"
- VICTORY_POINTS_13412:0 "Loto Aai"
+ VICTORY_POINTS_14753:0 "Loto Aai"
  VICTORY_POINTS_13284:0 "Savaiki"
  VICTORY_POINTS_13282:0 "Port Dewey"
  VICTORY_POINTS_13899:0 "Port Laurel"
  VICTORY_POINTS_13898:0 "King's Thumb"
  VICTORY_POINTS_13766:0 "Q'tir"
  VICTORY_POINTS_13756:0 "Qna'a"
- VICTORY_POINTS_13868:0 "Labn"
+ VICTORY_POINTS_15209:0 "Labn"
  VICTORY_POINTS_13822:0 "Asetale"
  VICTORY_POINTS_13821:0 "Virqq"
  VICTORY_POINTS_13808:0 "Neji"
  VICTORY_POINTS_13622:0 "Navheza"
- VICTORY_POINTS_13428:0 "Mauga O Molimau"
+ VICTORY_POINTS_14755:0 "Maugaomolimau"
  VICTORY_POINTS_13476:0 "Aai O Le Togavao"
- VICTORY_POINTS_14019:0 "Sable Blanc"
+ VICTORY_POINTS_15360:0 "Sable Blanc"
  VICTORY_POINTS_14027:0 "Nouvelle-Chambéry"
- VICTORY_POINTS_13744:0 "Waponi Woo"
+ VICTORY_POINTS_15085:0 "Waponi Woo"
  VICTORY_POINTS_14076:0 "Groene Velden"
  VICTORY_POINTS_14051:0 "San Leandro"
  VICTORY_POINTS_14033:0 "Cruz de San Andrés"
@@ -100,18 +100,18 @@
  VICTORY_POINTS_13903:0 "Manka"
  VICTORY_POINTS_13773:0 "Inirliq"
  VICTORY_POINTS_13796:0 "Girgu"
- VICTORY_POINTS_13702:0 "Joramlabnaj"
+ VICTORY_POINTS_15048:0 "Joramlabnaj"
  VICTORY_POINTS_13665:0 "Duqun"
  VICTORY_POINTS_13647:0 "Hatmaq"
  VICTORY_POINTS_13407:0 "Vaalele Malolo"
  VICTORY_POINTS_13384:0 "Inuhumuku"
- VICTORY_POINTS_13364:0 "Faanoanoa"
- VICTORY_POINTS_13274:0 "Vavae Ese"
- VICTORY_POINTS_13281:0 "Ofoofogia"
+ VICTORY_POINTS_14707:0 "Faanoanoa"
+ VICTORY_POINTS_14620:0 "Vavae Ese"
+ VICTORY_POINTS_14617:0 "Ofoofogia"
  VICTORY_POINTS_13305:0 "Lanumeamata"
- VICTORY_POINTS_13486:0 "Zalā Osta"
+ VICTORY_POINTS_14826:0 "Zalā Osta"
  VICTORY_POINTS_14111:0 "São Vicente"
- VICTORY_POINTS_14099:0 "Touro Preto"
+ VICTORY_POINTS_15440:0 "Touro Preto"
  VICTORY_POINTS_14091:0 "Solquente"
  VICTORY_POINTS_2724:0 "Winterbucht"
  VICTORY_POINTS_14062:0 "Duhuaz"
@@ -130,12 +130,12 @@
  VICTORY_POINTS_6881:0 "Santa Barbara"
  VICTORY_POINTS_14238:0 "Salinas"
  VICTORY_POINTS_941:0 "Bakersfield"
- VICTORY_POINTS_14159:0 "Zuhaitz"
- VICTORY_POINTS_14175:0 "Anoixte"
- VICTORY_POINTS_14178:0 "Yamylaik"
- VICTORY_POINTS_14171:0 "Doxa"
- VICTORY_POINTS_14184:0 "Osoa"
- VICTORY_POINTS_14190:0 "Burmiunean"
+ VICTORY_POINTS_15500:0 "Zuhaitz"
+ VICTORY_POINTS_15516:0 "Anoixte"
+ VICTORY_POINTS_15519:0 "Yamylaik"
+ VICTORY_POINTS_15512:0 "Doxa"
+ VICTORY_POINTS_15525:0 "Osoa"
+ VICTORY_POINTS_15531:0 "Burmiunean"
  VICTORY_POINTS_14148:0 "Þukefjäll"
  VICTORY_POINTS_14155:0 "Guðir Hjam"
  VICTORY_POINTS_14147:0 "Altenín"
