Avahya Archipelago now 3 states

--- a/localisation/aml_state_names_l_english.yml
+++ b/localisation/aml_state_names_l_english.yml
@@ -336,4 +336,6 @@
  STATE_1163:0 "Ker Ys"
  STATE_1164:0 "Saxemburg Island"
  STATE_1165:0 "St Matthew Island"
+ STATE_1166:0 "Panchaia Isles"
+ STATE_1167:0 "Ilhas Douradas"
  
