Elysium Islands Owned by Europeans

--- a/localisation/replace/aml_victory_points_l_english.yml
+++ b/localisation/replace/aml_victory_points_l_english.yml
@@ -50,7 +50,7 @@
  VICTORY_POINTS_14535:0 "Blauwasser"
  VICTORY_POINTS_15178:0 "Vatpagchi Saeli"
  VICTORY_POINTS_13905:0 "Nofoaga Agava'a"
- VICTORY_POINTS_13907:0 "Awa"
+ VICTORY_POINTS_13907:0 "Nya Elfsborg" #Real name look it up.
  VICTORY_POINTS_13515:0 "Moli Feagai"
  VICTORY_POINTS_14753:0 "Loto Aai"
  VICTORY_POINTS_13284:0 "Savaiki"
@@ -114,7 +114,6 @@
  VICTORY_POINTS_15440:0 "Touro Preto"
  VICTORY_POINTS_14091:0 "Solquente"
  VICTORY_POINTS_2724:0 "Winterbucht"
- VICTORY_POINTS_14062:0 "Duhuaz"
  VICTORY_POINTS_13853:0 "Zochtli"
  VICTORY_POINTS_13636:0 "Duneyig"
  VICTORY_POINTS_13618:0 "Tegzusuqu"
@@ -229,7 +228,6 @@
  VICTORY_POINTS_14519:0 "Kilespost"
  VICTORY_POINTS_14549:0 "Anchwhirram"
  VICTORY_POINTS_14501:0 "Meyerston"
- VICTORY_POINTS_14305:0 "Pama Station"
  VICTORY_POINTS_14430:0 "Audenshire"
  VICTORY_POINTS_14420:0 "Worrorra"
  VICTORY_POINTS_14458:0 "Elsinore"
@@ -276,3 +274,14 @@
  VICTORY_POINTS_12835: "Nuevo Laredo"
  VICTORY_POINTS_10795: "ad-Duwaym"
  VICTORY_POINTS_1960: "Nyala"
+ VICTORY_POINTS_14305: "Sveaborg"
+ VICTORY_POINTS_14307: "Strandviken"
+ VICTORY_POINTS_13991: "Gothenborg"
+ VICTORY_POINTS_14015: "Nya Vasa"
+ VICTORY_POINTS_13993: "Christina"
+ VICTORY_POINTS_14262: "Stuarts Town"
+ VICTORY_POINTS_13944: "Thatcherton" #Would be renamed after Margaret Thatcher leaves office
+ VICTORY_POINTS_14062: "Montaussonne"
+ VICTORY_POINTS_14115 : "Ny-Malmø"
+ VICTORY_POINTS_14060 : "Cesepaglia"
+ VICTORY_POINTS_14058 : "Nythrengroth"
