--- a/localisation/aml_state_names_l_english.yml
+++ b/localisation/aml_state_names_l_english.yml
@@ -321,18 +321,18 @@
  STATE_1148:0 "Hogland Archipelago"
  STATE_1149:0 "Avahya Archipelago"
  STATE_1150:0 "Panghuzitz Island"
- STATE_1151:0 "Western State"
- STATE_1152:0 "SW State"
- STATE_1153:0 "Northern State"
- STATE_1154:0 "Southern State"
- STATE_1155:0 "Eastern State"
+ STATE_1151:0 "Schuyler Island"
+ STATE_1152:0 "Sveaborg"
+ STATE_1153:0 "Strandviken"
+ STATE_1154:0 "Gothenborg"
+ STATE_1155:0 "Christina"
  STATE_1156:0 "Arrowhead Islands"
- STATE_1157:0 "Northern Western Islands"
- STATE_1158:0 "Eastern Arm Islands"
- STATE_1159:0 "Main Eastern Islands"
- STATE_1160:0 "Northern Eastern Islands"
- STATE_1161:0 "Central Eastern Islands"
- STATE_1162:0 "Far Eastern Islands"
+ STATE_1157:0 "Scotia Archipelago"
+ STATE_1158:0 "Storfisk Islands"
+ STATE_1159:0 "Nouvelle Occitanie"
+ STATE_1160:0 "Val Islands"
+ STATE_1161:0 "Balteos Islands"
+ STATE_1162:0 "Flueflekk Islands"
  STATE_1163:0 "Ker Ys"
  STATE_1164:0 "Saxemburg Island"
  STATE_1165:0 "St Matthew Island"
