Scotian Archipelago Nations Added

--- a/localisation/aml_state_names_l_english.yml
+++ b/localisation/aml_state_names_l_english.yml
@@ -321,11 +321,11 @@
  STATE_1148:0 "Hogland Archipelago"
  STATE_1149:0 "Avahya Archipelago"
  STATE_1150:0 "Panghuzitz Island"
- STATE_1151:0 "Schuyler Island"
- STATE_1152:0 "Sveaborg"
+ STATE_1151:0 "Schuyler Islands"
+ STATE_1152:0 "New Svealand"
  STATE_1153:0 "Strandviken"
- STATE_1154:0 "Gothenborg"
- STATE_1155:0 "Christina"
+ STATE_1154:0 "New Gothenland"
+ STATE_1155:0 "Christinasland"
  STATE_1156:0 "Arrowhead Islands"
  STATE_1157:0 "Scotia Archipelago"
  STATE_1158:0 "Storfisk Islands"
