--- a/localisation/replace/aml_countries_l_english.yml
+++ b/localisation/replace/aml_countries_l_english.yml
@@ -1,4 +1,100 @@
 ﻿l_english:
+ NOC_fascism:0 "Occitania"
+ NOC_fascism_DEF:0 "Occitania"
+ NOC_democratic:0 "Republic of New Occitania"
+ NOC_democratic_DEF:0 "Republic of Occitania"
+ NOC_neutrality:0 "Occitanie"
+ NOC_neutrality_DEF:0 "Occitanie de Sud"
+ NOC_communism:0 "Peoples Republic of New Occitania"
+ NOC_communism_DEF:0 "the Peoples Republic of New Occitania"
+ NOC_fascism_ADJ:0 "New Occitanian"
+ NOC_democratic_ADJ:0 "New Occitanian"
+ NOC_neutrality_ADJ:0 "New Occitanian"
+ NOC_communism_ADJ:0 "New Occitanian"
+ AVA_fascism:0 "Avahya"
+ AVA_fascism_DEF:0 "Avahya"
+ AVA_democratic:0 "Avahya Republic"
+ AVA_democratic_DEF:0 "Avahyan Republic"
+ AVA_neutrality:0 "Avahya"
+ AVA_neutrality_DEF:0 "Avahya"
+ AVA_communism:0 "Peoples Republic of Avahya"
+ AVA_communism_DEF:0 "the Peoples Republic of Avahya"
+ AVA_fascism_ADJ:0 "Avahyan"
+ AVA_democratic_ADJ:0 "Avahyan"
+ AVA_neutrality_ADJ:0 "Avahyan"
+ AVA_communism_ADJ:0 "Avahyan
+ MCF_fascism:0 "Mecafaria"
+ MCF_fascism_DEF:0 "Mecafaria"
+ MCF_democratic:0 "Democratic Republic of Mecafaria"
+ MCF_democratic_DEF:0 "Democratic Republic of Mecafaria"
+ MCF_neutrality:0 "Mecafaria"
+ MCF_neutrality_DEF:0 "Mecafaria"
+ MCF_communism:0 "Peoples Republic of Mecafaria"
+ MCF_communism_DEF:0 "the Peoples Republic of Mecafaria"
+ MCF_fascism_ADJ:0 "Mecafarian"
+ MCF_democratic_ADJ:0 "Mecafarian"
+ MCF_neutrality_ADJ:0 "Mecafarian"
+ MCF_communism_ADJ:0 "Mecafarian
+ SOK_fascism:0 "Södrakors"
+ SOK_fascism_DEF:0 "Södrakors"
+ SOK_democratic:0 "Republic of Södrakors"
+ SOK_democratic_DEF:0 "Republic of Södrakors"
+ SOK_neutrality:0 "Södrakors"
+ SOK_neutrality_DEF:0 "Södrakors"
+ SOK_communism:0 "Peoples Republic of Södrakors"
+ SOK_communism_DEF:0 "the Peoples Republic of Södrakors"
+ SOK_fascism_ADJ:0 "Södrakorsan"
+ SOK_democratic_ADJ:0 "Södrakorsan"
+ SOK_neutrality_ADJ:0 "Södrakorsan"
+ SOK_communism_ADJ:0 "Södrakorsan
+ SCP_fascism:0 "Scotia"
+ SCP_fascism_DEF:0 "Scotia"
+ SCP_democratic:0 "Republic of Scotia"
+ SCP_democratic_DEF:0 "Republic of Scotia"
+ SCP_neutrality:0 "Scotia"
+ SCP_neutrality_DEF:0 "Scotia"
+ SCP_communism:0 "Peoples Republic of Scotia"
+ SCP_communism_DEF:0 "the Peoples Republic of Scotia"
+ SCP_fascism_ADJ:0 "Scotian"
+ SCP_democratic_ADJ:0 "Scotian"
+ SCP_neutrality_ADJ:0 "Scotian"
+ SCP_communism_ADJ:0 "Scotian
+ ZEI_fascism:0 "Zilveren Eilanden"
+ ZEI_fascism_DEF:0 "Zilveren Eilanden"
+ ZEI_democratic:0 "Republic of Zuidelijke Eilanden"
+ ZEI_democratic_DEF:0 "Republic of Zuidelijke Eilanden"
+ ZEI_neutrality:0 "Zuidelijke Eilanden"
+ ZEI_neutrality_DEF:0 "Zuidelijke Eilanden"
+ ZEI_communism:0 "Peoples Republic of the Zuidelijke Eilanden"
+ ZEI_communism_DEF:0 "the Peoples Republic of the Zuidelijke Eilanden"
+ ZEI_fascism_ADJ:0 "Zilverling"
+ ZEI_democratic_ADJ:0 "Zuiderling"
+ ZEI_neutrality_ADJ:0 "Zuiderling"
+ ZEI_communism_ADJ:0 "Zuiderling
+ SYD_fascism:0 "Sydøerne"
+ SYD_fascism_DEF:0 "Sydøerne"
+ SYD_democratic:0 "Republic of Sydøerne"
+ SYD_democratic_DEF:0 "Republic of Sydøerne"
+ SYD_neutrality:0 "Sydøerne"
+ SYD_neutrality_DEF:0 "Sydøerne"
+ SYD_communism:0 "Peoples Republic of Sydøerne"
+ SYD_communism_DEF:0 "the Peoples Republic of Sydøerne"
+ SYD_fascism_ADJ:0 "Sydøboeren"
+ SYD_democratic_ADJ:0 "Sydøboeren"
+ SYD_neutrality_ADJ:0 "Sydøboeren"
+ SYD_communism_ADJ:0 "Sydøboeren
+ VAR_fascism:0 "Varingia"
+ VAR_fascism_DEF:0 "Varingia"
+ VAR_democratic:0 "Republic of Varingia"
+ VAR_democratic_DEF:0 "Republic of Varingia"
+ VAR_neutrality:0 "Varingia"
+ VAR_neutrality_DEF:0 "Varingia"
+ VAR_communism:0 "Peoples Republic of Varingia"
+ VAR_communism_DEF:0 "the Peoples Republic of Varingia"
+ VAR_fascism_ADJ:0 "Varingian"
+ VAR_democratic_ADJ:0 "Varingian"
+ VAR_neutrality_ADJ:0 "Varingian"
+ VAR_communism_ADJ:0 "Varingian
  BSD_fascism:0 "Basidia"
  BSD_fascism_DEF:0 "Basidia"
  BSD_democratic:0 "Republic of Basidia"
@@ -10,7 +106,7 @@
  BSD_fascism_ADJ:0 "Basidian"
  BSD_democratic_ADJ:0 "Basidian"
  BSD_neutrality_ADJ:0 "Basidian"
- BSD_communism_ADJ:0 "Basidian"
+ BSD_communism_ADJ:0 "Basidian""
  PRJ_fascism:2 "Unitary Yohannia"
  PRJ_fascism_DEF:2 "Unitary Yohannia"
  PRJ_democratic:0 "Yohannia"
