updates to ideologies

--- a/localisation/aml_parties_l_english.yml
+++ b/localisation/aml_parties_l_english.yml
@@ -1,4 +1,7 @@
 ﻿l_english:
+ theodemocracy:0 "Theodemocracy"			
+ theodemocracy_desc:0 "Proposed by Mormon leader Joseph Smith Jr, Theodemocracy is founded on the principle of shared sovereignty between the people and God. Heavily based in the republican democratic Constitution of the United States of America, theodemocracy is a fusion of representative democracy and theocratic rule."			
+ corporal:0 "Corporal"	
  mandalism:0 "Mandalism"
  mandalism_noun:0 "Mandalist"
  mandalism_desc:0 "Based on the ancient Indolemurian concept of the village council, the Mandala. Mandalism allows for ownership of private property, however the local Mandala will decide if the use of the property is beneficial to society as a whole. Thus, a balance of private and public interests is maintained."
