Map updates, ideology updates

--- a/localisation/aml_parties_l_english.yml
+++ b/localisation/aml_parties_l_english.yml
@@ -44,6 +44,9 @@
  MUU_communism_party:0 "Munu Qomiunist Partizi"
  MUU_democratic_party:0 "Temoqrazi Partizi"
  MUU_neutrality_party:0 "Qenti Itale Partizi"
+ MUU_islamism_party:0 "Yslam Partizi"
+ MUU_monarchism_party:0 "Ujjamunaz Partizi"
+ MUU_mandalism_party:0 "No Representation"
  FMU_neutrality_party:0 "Selbstverwaltung Partei"
  FMU_fascism_party:0 "ZNSP"
  FMU_fascism_party_long:0 "Zentrale Nationalsozialistische Partei"
@@ -52,31 +55,52 @@
  FMU_communism_party_long:0 "Deutschemu Sozialisten"
  FMU_communism_coalition:0 "DMS-GdEA"
  FMU_communism_coalition_long:0 "Deutschemu Sozialisten-Gewerkschaft der Einheimischen Arbeiter"
- ATL_neutrality_party:0 "Guredda Parti"
+ FMU_islamism_party:0 "Deutschemu Islamrat"
+ FMU_mandalism_party:0 "No Representation"
+ FMU_monarchism_party:0 "Königspartei"
+ ATL_neutrality_party:0 "Vakeaedleseranle Parti"
  ATL_fascism_party:0 "Zarikgudal Parti"
  ATL_democratic_party:0 "Lestadentiral Parti"
- ATL_communism_party:0 "Komunistal Parti"
- FRI_neutrality_party:0 "Tískiflokkrinn"
- FRI_communism_party:0 "Komminternflokkr Fríslands"
- FRI_democratic_party:0 "Frjáls Þjóðmannflokkrinn"
- FRI_fascism_party:0 "Tingmannflokkr"
+ ATL_communism_party:0 "Kamunistal Parti"
+ ATL_monarchism_party:0 "Guredda Parti"
+ ATL_islamism_party:0 "Alislam-Edleseran Parti"
+ ATL_mandalism_party:0 "No Representation"
+ FRS_neutrality_party:0 "Tískiflokkrinn"
+ FRS_communism_party:0 "Komminternflokkr Fríslands"
+ FRS_democratic_party:0 "Frjáls Þjóðmannflokkrinn"
+ FRS_fascism_party:0 "Tingmannflokkr"
+ FRS_monarchism_party:0 "Konungslegrflokkr"
+ FRS_mandalism_party:0 "No Representation"
+ FRS_islamism_party:0 "No Representation"
  THU_neutrality_party:0 "Free Atlantic Party"
  THU_democratic_party:0 "Fiskimannaflokkurinn"
  THU_communism_party:0 "TIP"
  THU_communism_party_long:0 "Thule International Party"
  THU_fascism_party:0 "Thuleman Order"
+ THU_monarchism_party:0 "Konungsflokkur"
+ THU_mandalism_party:0 "No Representation"
+ THU_islamism_party:0 "No Representation"
  BLM_communism_party:0 "Lemurian Workers Party"
  BLM_neutrality_party_long:0 "The Queens Royal Party of British Lemuria"
  BLM_neutrality_party:0 "TQRPBL"
  BLM_democratic_party:0 "High Tory Party"
  BLM_fascism_party:0 "Anglish Union Party"
+ BLM_monarchism_party:0 "Royal Home Rule Party"
+ BLM_islamism_party:0 "Lemurian-Islamic Unity Party"
+ BLM_mandalism_party:0 "No Representation"
  KUM_democratic_party:0 "Liberal Democratic Party"
- KUM_neutrality_party:0 "Kumari Royalist Movement"
+ KUM_neutrality_party:0 "Kumari Prosperity Party"
  KUM_communism_party:0 "Communist Party of Kumari"
  KUM_fascism_party:0 "Kumari Kandam Congress"
- PRJ_neutrality_party:0 "Hierosolimitanus Dynasty"
+ KUM_islamism_party:0 "Kumari Islamic Party"
+ KUM_mandalism_party:0 "National Mandala"
+ KUM_monarchism_party:0 "Kumari Royalist Party"
+ PRJ_neutrality_party:0 "Yohannian Prosperity Party"
  PRJ_fascism_party:0 "Religious Parties of Yohannia"
  PRJ_democratic_party:0 "IDPY"
  PRJ_democratic_party_long:0 "Independent Democratic Parties of Yohannia"
  PRJ_communism_party:0 "YCP"
  PRJ_communism_party_long:0 "Yohannian Communist Party"
+ PRJ_mandalism_party:0 "No Representation"
+ PRJ_islamism_party:0 "Yohannian Islamic Council"
+ PRJ_monarchism_party:0 "Hierosolimitanus Dynasty"
