Monarchism loc updates

--- a/localisation/aml_parties_l_english.yml
+++ b/localisation/aml_parties_l_english.yml
@@ -1,10 +1,10 @@
 ﻿l_english:
  theodemocracy:0 "Theodemocracy"			
  theodemocracy_desc:0 "Proposed by Mormon leader Joseph Smith Jr, Theodemocracy is founded on the principle of shared sovereignty between the people and God. Heavily based in the republican democratic Constitution of the United States of America, theodemocracy is a fusion of representative democracy and theocratic rule."			
- corporal:0 "Corporal"	
  mandalism:0 "Mandalism"
  mandalism_noun:0 "Mandalist"
- mandalism_desc:0 "Based on the ancient Indolemurian concept of the village council, the Mandala. Mandalism allows for ownership of private property, however the local Mandala will decide if the use of the property is beneficial to society as a whole. Thus, a balance of private and public interests is maintained."
+ mandalism_desc:0 "Mandalist Regime"
+ mandalism_desc_alt:0 "Based on the ancient Indolemurian concept of the village council, the Mandala. Mandalism allows for ownership of private property, however the local Mandala will decide if the use of the property is beneficial to society as a whole. Thus, a balance of private and public interests is maintained."
  asanvarinnism:0 "Asanvarinnism"			
  asanvarinnism_desc:0 "Asanvarinnu, the young and vital leader of Mandalism, codified and standardized the tenets of our ancient mandalist ancestors. By adhering strongly to the principles of modern Mandalism's founder nations can ensure the benefit of both the individual and the public."			
  corporal:0 "Corporal"	
@@ -19,17 +19,40 @@
  synthetic_desc:0 "Blending the principles of free enterprise as understood by the West with the principles of Mandalism, Synthetism allows foreign holding within the nation, but also defines how they can and will be used for the good of the people. Synthetism is significantly friendlier to foreign capitalism."
  monarchism:0 "Monarchism"
  monarchism_noun:0 "Monarchist"
- monarchism_desc:0 "Government is headed by a single person as king, queen, emperor or empress. While the head of government may rely on a privy council or on a larger organ of the state such as a parliament, ultimate power of governance rests with the monarch."
- absolutism:0 "Absolutism"
- absolutism_desc:0 "As opposed to monarchies which arise from the consent of the governed in an absolute monarchy the monarch rules in their own right. In absolutism the will of the monarch is paramount, answering to no one else."
+ monarchism_desc:0 "Monarchist Regime"
+ king:0 "Kingdom"
+ king_desc:0 "A king/queen is an hereditary monarch vested with the power of the executive branch and is often considered to have ownership of the nation. Some kingdoms may be limited by constitutions, but others have a much more centralized authority with the King/Queen having vassals who own them fealty and allegiance."
+ emperor:0 "Emperor"
+ emperor_desc:0 "Considered the most powerful or influential of all monarchs, Emperors/Empresses typically rule with absolute power over vast domains."
+ absolutist:0 "Absolutism"
+ absolutist_desc:0 "As opposed to monarchies which arise from the consent of the governed in an absolute monarchy the monarch rules in their own right. In absolutism the will of the monarch is paramount, answering to no one else."
  enlightened:0 "Enlightened Monarchism"
- enlightened_desc:0 "While the enlightened monarch continues to wield all the powers of an absolute monarch, but his or her intention is to bring 'Enlightenment' and civilization to his or her subjects."
+ enlightened_desc:0 "While the enlightened monarch continues to wield all the powers of an absolute monarch, his or her intention is to bring 'Enlightenment' and civilization to his or her subjects."
  elective:0 "Elective Monarchist"
  elective_desc:0 "As opposed to the hereditary monarchies of old, elective monarchies have the sovereign reign until death then elect a new one from a pool of candidates. This ensures that only the most competent rule as opposed to the potentially idiot children of an hereditary line."
- emirate:0 "Emirate"
- emirate_desc:0 "In the Islamic world an emirate is ruled by an emir, historically a person who may have been a monarch, an aristocrat or a high-ranking military official. Modernly, the emir is synonymous with prince or king in the West."
+ prince:0 "Princedom"
+ prince_desc:0 "This nation is lead by a monarch who calls himself Prince, usually ruling over a lesser monarchy, though some use the title Prince/Princess as a way of connecting better with their public and/or seeming more humble."
+ duke:0 "Dukedom"
+ duke_desc:0 "A duke/duchess is the leader of a political entity called a duchy. While often quite powerful in their own right duchies are often considered smaller or less powerful than kingdoms or empires. Some monarchs style themselves a Duke/Duchess as a matter of historical continuation of a title more than as a representation of their lesser status internationally."
+ kaiser:0 "Kaiser"
+ kaiser_desc:0 "As the emperor of a Germanic nation a Kaiser has a huge amount of power within the nation. The Kaiser/Kaiserin is considered to be a descendant, literal or figurative, of the Holy Roman Emperors of Europe's bygone era."
+ tsar:0 "Tsar"
+ tsar_desc:0 "Equivalent to an Emperor or Kaiser, the Tsar/Tsarina is an absolute ruler of a Slavic nation."
+ margrave:0 "Margrave"
+ margrave_desc:0 "Originally a German word 'Markgraff', a margrave/margravine was traditionally a vassal of a kingdom or empire charged with protecting the bordrs - the Mark or March, though at times they were able to establish themselves as independent rulers. Roughly equivalent to a 'count' a margrave's power arose primarily from the military forces his nation could muster in times of war."
+ emir:0 "Emirate"
+ emir_desc:0 "In the Islamic world an emirate is ruled by an emir, historically a person who may have been a monarch, an aristocrat or a high-ranking military official. Modernly, the emir is synonymous with prince or king in the West."
+ khan:0 "Khan"
+ khan_desc:0 "A rough equivalent to a king or emperor, a khan/khatun is a depotic monarch in the Mongolian or Turkic traditions."
+ shah:0 "Shah"
+ shah_desc:0 "A Persian title meaning 'great king' or Emperor, the Shah/Shahbanu is an autocratic monarch in the Persian region or northern Indian subcontinent."
+ sultan:0 "Sultan"
+ sultan_desc:0 "A Sultan is a ruler in the Middle East, typically in an Arabic speaking country. The rank of a sultan is equivalent to the rank of king in Europe though it has connotations associated with an Islamic as opposed to a secular ruler."
+ raja:0 "Raja"
+ raja_desc:0 "Raja is a title used for monarchs from the Indian Subcontinent or Southeast Asia. A raja is equivalent to a king or princely ruler in the European system of royalty."
  islamism:0 "Islamism"
- islamism_desc:0 "Islamism seeks to bring society into accordance with the guidance of the Q'ran, the Nabī -prophets- and the Rasūl -messengers-. They will impose Sharia Law, or religious law, to enforce righteousness in society."
+ islamism_desc:0 "Islamist Regime"
+ islamism_desc_alt:0 "Islamism seeks to bring society into accordance with the guidance of the Q'ran, the Nabī -prophets- and the Rasūl -messengers-. They will impose Sharia Law, or religious law, to enforce righteousness in society."
  reactionary:0 "Reactionary"
  reactionary_desc:0 "The rule of law in Reactionary Islamism rejects foreign influences as haram or forbidden. Seeking a return to the rule of religious law, Reactionaries reject modern influences."
  salafism:0 "Salafism"
